--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "graphql": "^16.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^0.9.5",
     "web-vitals": "^2.1.4"
   },
